--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Catálogo de Directores</title>
+    <title>Catálogo de Películas Animadas</title>
     <link rel="icon" type="image/png" href="favicon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -15,15 +15,63 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://unpkg.com/mustache@latest"></script>
-    <script src="https://unpkg.com/navigo"></script>
-    <script src="js/table.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <script src="js/app.js"></script>
   </head>
-  <body onload="init()">
-    <div class="container">
-      <div id="content"></div>
-    </div>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">Inicio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:redirect('movie')"
+                >Películas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:redirect('director')"
+                >Directores</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:redirect('study')"
+                >Estudios</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <main class="container">
+      <iframe
+        id="iframe"
+        class="w-100 h-100 mt-3 mb-3"
+        src="home.html"
+      ></iframe>
+    </main>
+    <footer class="text-center text-lg-start bg-light text-muted">
+      <div
+        class="text-center p-4"
+        style="background-color: rgba(0, 0, 0, 0.05)"
+      >
+        © 2022 Copyright:
+        <a class="text-reset fw-bold" href="#">José Beita Cascante</a>
+      </div>
+    </footer>
   </body>
 </html>
