--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Catálogo de Películas Animadas</title>
@@ -21,7 +21,7 @@
     />
     <script src="js/app.js"></script>
   </head>
-  <body>
+  <body class="h-100">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Inicio</a>
@@ -57,10 +57,10 @@
         </div>
       </div>
     </nav>
-    <main class="container">
+    <main class="container h-100 pt-3 pb-3">
       <iframe
         id="iframe"
-        class="w-100 h-100 mt-3 mb-3"
+        class="w-100 h-100"
         src="home.html"
       ></iframe>
     </main>
